schemars/tests/ui/repr_missing.stderr
error: JsonSchema_repr: missing #[repr(...)] attribute
 --> $DIR/repr_missing.rs:3:10
  |
3 | #[derive(JsonSchema_repr)]
  |          ^^^^^^^^^^^^^^^
  |
  = note: this error originates in the derive macro `JsonSchema_repr` (in Nightly builds, run with -Z macro-backtrace for more info)
